# ai-invention-57cbed-demand-driven-fact-extraction-for-neuro

./: README.md
paper_latex/workspace/: .terminal_claude_agent_struct_out.json  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  references.bib
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb  mini_demo_data.json
round-1/dataset-1/src/: .aii_cost_ledger.jsonl  .terminal_claude_agent_struct_out.json  data.py  mini_data_out.json  preview_data_out.json
round-1/experiment-1/: README.md
round-1/experiment-1/demo/: method_code_demo.ipynb  mini_demo_data.json
round-1/experiment-1/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-1/research-1/: README.md
round-1/research-1/demo/: research_demo.md
round-1/research-1/src/: .aii_cost_ledger.jsonl  .terminal_claude_agent_struct_out.json  research_out.json
round-2/evaluation-1/: README.md
round-2/evaluation-1/demo/: eval_code_demo.ipynb  mini_demo_data.json
round-2/evaluation-1/src/: .terminal_claude_agent_struct_out.json  eval.py  eval_out.json  mini_full_eval_out.json  preview_eval_out.json  pyproject.toml
round-2/experiment-1/: README.md
round-2/experiment-1/demo/: method_code_demo.ipynb  mini_demo_data.json
round-2/experiment-1/src/: .terminal_claude_agent_struct_out.json  llm_calls.jsonl  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-2/experiment-1/src/logs/: run_50.txt
round-2/research-1/: README.md
(+3 files in other folders)
