[project]
name = "rfde-experiment"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "distro==1.9.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.18",
    "jiter==0.15.0",
    "joblib==1.5.3",
    "loguru==0.7.3",
    "nltk==3.9.4",
    "numpy==2.4.6",
    "openai==2.41.1",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "rank-bm25==0.2.2",
    "regex==2026.5.9",
    "requests==2.34.2",
    "sniffio==1.3.1",
    "tenacity==9.1.4",
    "tqdm==4.68.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
]
