[project]
name = "rfde-experiment"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "attrs==26.1.0",
    "frozenlist==1.8.0",
    "idna==3.18",
    "loguru==0.7.3",
    "multidict==6.7.1",
    "numpy==2.4.6",
    "propcache==0.5.2",
    "rank-bm25==0.2.2",
    "scipy==1.17.1",
    "typing_extensions==4.15.0",
    "yarl==1.24.2",
]
